--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -11,7 +11,7 @@
     <convert:SelectedHotkeyToBooleanConverter x:Key="SelectedHotkeyToBooleanConverter"/>
     <convert:KeyCombinationToStringConverter x:Key="KeyCombinationToStringConverter"/>
     <convert:UpdateStateToVisibilityConverter x:Key="UpdateStateToVisibilityConverter"/>
-    <convert:PlaylistCountToStringConverter x:Key="PlaylistCountToStringConverter"/>
+    <convert:CountToStringConverter x:Key="CountToStringConverter"/>
     <convert:BeatmapToAvailablePlaylistsConverter x:Key="BeatmapToAvailablePlaylistsConverter"/>
     <convert:MultipleParametersConverter x:Key="MultipleParametersConverter"/>
     <convert:PackIconKindToStringConverter x:Key="PackIconKindToStringConverter"/>
@@ -19,5 +19,6 @@
     <convert:SongTitleColumnConverter x:Key="SongTitleColumnConverter"/>
     <convert:BeatmapToImageConverter x:Key="BeatmapToImageConverter"/>
     <convert:PlaylistToImageConverter x:Key="PlaylistToImageConverter"/>
+    <convert:CollectionToImageConverter x:Key="CollectionToImageConverter"/>
     <convert:WidthToHorizontalOffsetConverter x:Key="WidthToHorizontalOffsetConverter"/>
 </ResourceDictionary>
