--- a/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
@@ -48,7 +48,7 @@
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Button Style="{DynamicResource PlaylistAction}" Content="&#xe037;" FontSize="70" Margin="5 0 5 0" Height="40" Width="40"
                                     HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                    Command="{Binding DataContext.SelectPlaylistAndPlayCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:MainView}}}"
+                                    Command="{Binding DataContext.LaunchPlaylistCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:PlaylistsView}}}"
                                     CommandParameter="{Binding Path=.}"/>
                         </StackPanel>
                     </Border>
@@ -80,24 +80,26 @@
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </TextBlock>
-                <TextBlock Text="{Binding Path=Beatmaps.Count, Converter={StaticResource PlaylistCountToStringConverter}}" FontFamily="{DynamicResource Poppins}" FontSize="12" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}"/>
+                <TextBlock Text="{Binding Path=Beatmaps.Count, Converter={StaticResource CountToStringConverter}}" FontFamily="{DynamicResource Poppins}" FontSize="12" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}"/>
             </StackPanel>
         </Border>
     </DataTemplate>
 
     <DataTemplate x:Key="CollectionTile" DataType="{x:Type cm:Collection}">
-        <Border BorderBrush="{DynamicResource SolidColorBrushMainBorder}" Background="White" BorderThickness="1" CornerRadius="5" Height="210" Width="160" Margin="5">
-            <StackPanel Margin="3">
+        <Border Margin="5">
+            <StackPanel>
                 <Grid>
                     <Grid>
-                        <Rectangle Width="130" Height="122" RadiusX="15" RadiusY="15"  Margin="0 15 0 0"
-                               Fill="{DynamicResource SolidColorBrushMain}"/>
-                        <materialDesign:PackIcon HorizontalAlignment="Center" VerticalAlignment="Center" Width="80" Height="80" Margin="0 10 0 0"
-                                             Foreground="White"
-                                             Kind="Music">
-                        </materialDesign:PackIcon>
+                        <Rectangle Width="145" Height="145" RadiusX="10" RadiusY="10" Fill="#20000000"/>
+                        <materialDesign:PackIcon HorizontalAlignment="Center" VerticalAlignment="Center" Width="80" Height="80" Margin="0 10 0 0" Foreground="#50000000" Kind="PlaylistNote"/>
+                        <Grid Width="145" Height="145">
+                            <Grid.Clip>
+                                <RectangleGeometry Rect="0 0 145 145" RadiusX="10" RadiusY="10"/>
+                            </Grid.Clip>
+                            <Image Source="{Binding Path=., Converter={StaticResource CollectionToImageConverter}}" Stretch="UniformToFill" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
                     </Grid>
-                    <Border x:Name="CollcetionControls" Width="130" Height="122" Background="#70000000" Opacity="0.0" CornerRadius="15" Margin="0 15 0 0">
+                    <Border x:Name="PlaylistControls" Width="145" Height="145" Background="#70000000" Opacity="0.0" CornerRadius="15">
                         <Border.Style>
                             <Style TargetType="{x:Type Border}">
                                 <Style.Triggers>
@@ -125,12 +127,12 @@
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                             <Button Style="{DynamicResource PlaylistAction}" Content="&#xe037;" FontSize="70" Margin="5 0 5 0" Height="40" Width="40"
                                     HorizontalContentAlignment="Center" VerticalContentAlignment="Center"
-                                    Command="{Binding DataContext.SelectCollectionAndPlayCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:MainView}}}"
+                                    Command="{Binding DataContext.LaunchCollectionCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:CollectionsView}}}"
                                     CommandParameter="{Binding Path=.}"/>
                         </StackPanel>
                     </Border>
                 </Grid>
-                <TextBlock Text="{Binding Path=Name}" FontFamily="{DynamicResource Poppins}" Foreground="{DynamicResource SolidColorBrushMain}" Background="White" FontSize="14" FontWeight="DemiBold" Margin="11 20 11 0">
+                <TextBlock Text="{Binding Path=Name}" FontFamily="{DynamicResource Poppins}" Foreground="{DynamicResource SolidColorBrushTextHighEmphasis}" Background="White" FontSize="12" FontWeight="DemiBold" MaxWidth="145">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
                             <Style.Triggers>
@@ -144,7 +146,7 @@
                         <LinearGradientBrush StartPoint="0.0,0.5" EndPoint="1.0,0.5">
                             <LinearGradientBrush.GradientStops>
                                 <GradientStop Offset="0" Color="Black"/>
-                                <GradientStop Offset="0.8" Color="Black"/>
+                                <GradientStop Offset="0.7" Color="Black"/>
                                 <GradientStop Offset="1" Color="Transparent"/>
                             </LinearGradientBrush.GradientStops>
                         </LinearGradientBrush>
@@ -152,12 +154,12 @@
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="MouseLeftButtonUp">
                             <prism:InvokeCommandAction 
-                                Command="{Binding DataContext.SelectCollectionCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:MainView}}}"
+                                Command="{Binding DataContext.SelectCollectionCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:CollectionsView}}}"
                                 CommandParameter="{Binding Path=.}"/>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </TextBlock>
-                <TextBlock Text="{Binding Path=Beatmaps.Count, Converter={StaticResource PlaylistCountToStringConverter}}" FontFamily="{DynamicResource Poppins}" FontSize="14" FontWeight="Light" Foreground="Gray" Margin="11 5 11 0"/>
+                <TextBlock Text="{Binding Path=Beatmaps.Count, Converter={StaticResource CountToStringConverter}}" FontFamily="{DynamicResource Poppins}" FontSize="12" FontWeight="Light" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}"/>
             </StackPanel>
         </Border>
     </DataTemplate>
