--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -21,4 +21,5 @@
     <convert:PlaylistToImageConverter x:Key="PlaylistToImageConverter"/>
     <convert:CollectionToImageConverter x:Key="CollectionToImageConverter"/>
     <convert:WidthToHorizontalOffsetConverter x:Key="WidthToHorizontalOffsetConverter"/>
+    <convert:StringEmptyConverter x:Key="StringEmptyConverter"/>
 </ResourceDictionary>
