--- a/src/Osu.Music.UI/Views/LibraryView.xaml
+++ b/src/Osu.Music.UI/Views/LibraryView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Osu.Music.UI.Views"
              xmlns:m="clr-namespace:Osu.Music.Common.Models;assembly=Osu.Music.Common"
              xmlns:prism="http://prismlibrary.com/"
+             xmlns:behaviors="clr-namespace:Osu.Music.UI.Behaviors"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -13,7 +14,8 @@
         <ListView x:Name="SongsList" Style="{DynamicResource ListViewBeatmaps}"
                   ItemsSource="{Binding Model.Beatmaps}" 
                   SelectedItem="{Binding Playback.Beatmap, Mode=OneWay}" 
-                  HorizontalContentAlignment="Stretch">
+                  HorizontalContentAlignment="Stretch"
+                  behaviors:ScrollBeatmapIntoViewBehavior.Target="{Binding Model.Target}">
             <ListView.ItemTemplate>
                 <DataTemplate DataType="{x:Type m:Beatmap}">
                     <Grid Name="ItemContainer">
