--- a/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Converters.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:convert="clr-namespace:Osu.Music.UI.Resources.Converters">
+                    xmlns:convert="clr-namespace:Osu.Music.UI.Resources.Converters"
+                    xmlns:flags="clr-namespace:FamFamFam.Flags.Wpf;assembly=FamFamFam.Flags.Wpf">
     <convert:ReverseVisibilityConverter x:Key="ReverseVisibilityConverter"/>
     <convert:ProgressToSizeConverter x:Key="ProgressToSizeConverter"/>
     <convert:TimeSpanToStringConverter x:Key="TimeSpanToStringConverter"/>
@@ -22,4 +23,6 @@
     <convert:CollectionToImageConverter x:Key="CollectionToImageConverter"/>
     <convert:WidthToHorizontalOffsetConverter x:Key="WidthToHorizontalOffsetConverter"/>
     <convert:StringEmptyConverter x:Key="StringEmptyConverter"/>
+    <convert:StringToLocalizationCulture x:Key="StringToLocalizationCulture"/>
+    <flags:CountryIdToFlagImageSourceConverter x:Key="CountryIdToFlagImageSourceConverter" />
 </ResourceDictionary>
