--- a/src/Osu.Music.UI/Views/SettingsView.xaml
+++ b/src/Osu.Music.UI/Views/SettingsView.xaml
@@ -9,6 +9,7 @@
              xmlns:local="clr-namespace:Osu.Music.UI.Views"
              xmlns:models="clr-namespace:Osu.Music.Common.Models;assembly=Osu.Music.Common"
              xmlns:uc="clr-namespace:Osu.Music.UI.UserControls"
+             xmlns:loc="clr-namespace:Osu.Music.Services.Localization;assembly=Osu.Music.Services"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -23,6 +24,23 @@
             <TabItem Header="General">
                 <ScrollViewer MaxWidth="700">
                     <StackPanel Orientation="Vertical" Margin="5">
+                        <Grid Height="35" HorizontalAlignment="Stretch">
+                            <TextBlock Text="LANGUAGE" Style="{DynamicResource MenuSubHeader}"/>
+                        </Grid>
+                        <ComboBox Style="{DynamicResource MaterialDesignComboBox}" 
+                                  SelectedValue="{Binding Model.Settings.Culture, Converter={StaticResource StringToLocalizationCulture}}"
+                                  ItemsSource="{Binding LocalizationManager.Cultures}" 
+                                  MaxWidth="400" Margin="0 0 10 30" HorizontalAlignment="Left">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate DataType="{x:Type loc:LocalizationCulture}">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="{Binding Path=Code, Converter={StaticResource CountryIdToFlagImageSourceConverter}}" RenderOptions.BitmapScalingMode="HighQuality"/>
+                                        <TextBlock Text="{Binding Path=Name}" Margin="10 0 0 0"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
+
                         <Grid Height="35" HorizontalAlignment="Stretch">
                             <TextBlock Text="PATH TO OSU!" Style="{DynamicResource MenuSubHeader}"/>
                             <Button Content="CHANGE" Style="{DynamicResource MaterialDesignFlatButton}" Command="{Binding UpdateSourceCommand}" HorizontalAlignment="Right"/>
